--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -85,7 +85,7 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: 22
-          source: "./dist/*,docker-compose.yml,nginx.conf"
+          source: "./dist/*,./config/*"
           target: "/nest/server"
           overwrite: true
           recursive: true
