--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -90,49 +90,49 @@ jobs:
           overwrite: true
           recursive: true
 
-      # - name: 通过docker-compose启动服务（带超时优化）
-      #   uses: appleboy/ssh-action@v1.0.2
-      #   with:
-      #     host: ${{ secrets.SERVER_HOST }}
-      #     username: ${{ secrets.SERVER_USERNAME }}
-      #     key: ${{ secrets.SERVER_SSH_KEY }}
-      #     script: |
-      #       cd /nest/server || exit 1
-      #       docker-compose down  # 停止旧容器
+      - name: 通过docker-compose启动服务（带超时优化）
+        uses: appleboy/ssh-action@v1.0.2
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            cd /nest/server || exit 1
+            docker-compose down  # 停止旧容器
 
-      #       # 关键修复3：增加拉取超时时间，重试机制
-      #       echo "===== 拉取镜像（带超时和重试） ====="
-      #       for i in {1..3}; do
-      #         echo "第 $i 次尝试拉取镜像..."
-      #         if COMPOSE_HTTP_TIMEOUT=300 docker-compose pull; then
-      #           echo "✅ 镜像拉取成功"
-      #           break
-      #         fi
-      #         if [ $i -eq 3 ]; then
-      #           echo "❌ 镜像拉取多次失败"
-      #           exit 1
-      #         fi
-      #         echo "等待10秒后重试..."
-      #         sleep 10
-      #       done
+            # 关键修复3：增加拉取超时时间，重试机制
+            echo "===== 拉取镜像（带超时和重试） ====="
+            for i in {1..3}; do
+              echo "第 $i 次尝试拉取镜像..."
+              if COMPOSE_HTTP_TIMEOUT=300 docker-compose pull; then
+                echo "✅ 镜像拉取成功"
+                break
+              fi
+              if [ $i -eq 3 ]; then
+                echo "❌ 镜像拉取多次失败"
+                exit 1
+              fi
+              echo "等待10秒后重试..."
+              sleep 10
+            done
 
-      #       # 启动服务
-      #       docker-compose up -d --build
+            # 启动服务
+            docker-compose up -d --build
 
-      #       # 验证容器状态
-      #       docker-compose ps
-      #       docker-compose logs --tail=100
+            # 验证容器状态
+            docker-compose ps
+            docker-compose logs --tail=100
 
-      # - name: 验证部署结果
-      #   uses: appleboy/ssh-action@v1.0.2
-      #   with:
-      #     host: ${{ secrets.SERVER_HOST }}
-      #     username: ${{ secrets.SERVER_USERNAME }}
-      #     key: ${{ secrets.SERVER_SSH_KEY }}
-      #     script: |
-      #       if curl -s --connect-timeout 10 --head "http://localhost" | grep "200 OK" > /dev/null; then
-      #         echo "✅ 部署成功"
-      #       else
-      #         echo "❌ 部署失败"
-      #         exit 1
-      #       fi
+      - name: 验证部署结果
+        uses: appleboy/ssh-action@v1.0.2
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            if curl -s --connect-timeout 10 --head "http://localhost" | grep "200 OK" > /dev/null; then
+              echo "✅ 部署成功"
+            else
+              echo "❌ 部署失败"
+              exit 1
+            fi
