--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -2,9 +2,9 @@ name: 前端部署工作流
 on:
   push:
     branches: [master]
-    paths:
-      - "admin-vue3/**"
-      - "admin.yml"
+    # paths:
+    #   - "admin-vue3/**"
+    #   - "admin.yml"
 
 jobs:
   build-and-deploy:
