--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -13,6 +13,8 @@ jobs:
       - name: 拉取代码1
         uses: actions/checkout@v4
 
+      - run: cd admin-vue3
+
       - name: 配置Node环境
         uses: actions/setup-node@v4
         with:
@@ -21,7 +23,6 @@ jobs:
 
       - name: 安装依赖与构建
         run: |
-          cd admin-vue3
           npm ci
           npm run build
 
