--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -12,6 +12,8 @@ jobs:
       - name: 拉取代码
         uses: actions/checkout@v4
 
+      - run: cd server
+
       - name: 配置Node环境
         uses: actions/setup-node@v4
         with:
@@ -20,7 +22,6 @@ jobs:
 
       - name: 安装依赖与构建
         run: |
-          cd server
           npm ci
           npm run build
 
