--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -13,6 +13,7 @@ jobs:
       - name: 拉取代码1
         uses: actions/checkout@v4
 
+      - run: ls -la /
       - run: cd admin-vue3
 
       - name: 配置Node环境
