--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -12,8 +12,9 @@ jobs:
       - name: 拉取代码
         uses: actions/checkout@v4
 
-      - run: ls -la /
-      - run: cd server
+      - name: 切换根目录
+        run: cd server
+        working-directory: server
 
       - name: 配置Node环境
         uses: actions/setup-node@v4
