--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -2,9 +2,9 @@ name: 部署服务器端代码
 on:
   push:
     branches: [master]
-    # paths:
-    #   - "server/**"
-    #   - "server.yml"
+    paths:
+      - "server/**"
+      - ".github/workflowsserver.yml"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: "build-output-server"
-          path: "./server/dist,./server/config"
+          paths: "./server/dist,./server/config"
   deploy:
     runs-on: ubuntu-latest
     needs: build
