--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: 拉取代码1
+      - name: 拉取代码
         uses: actions/checkout@v4
 
       - name: 配置Node环境
