--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -4,7 +4,7 @@ on:
     branches: [master]
     paths:
       - "server/**"
-      - ".github/workflowsserver.yml"
+      - ".github/workflows/server.yml"
 jobs:
   build:
     runs-on: ubuntu-latest
