--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -29,9 +29,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: "build-output-server"
-          paths: |
-            - "./server/dist"
-            - "./server/config"
+          path: |
+            ./server/dist
+            ./server/config
   deploy:
     runs-on: ubuntu-latest
     needs: build
