--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,6 @@ name: 前端部署工作流
 on:
   push:
     branches: [master]
-    paths:
-      - "admin-vue3/**"
-      - ".github/workflows/admin.yml"
 
 jobs:
   build:
@@ -46,7 +43,7 @@ jobs:
           script: |
             # 创建目录和备份（保持原有逻辑）
             if [ ! -d "/nest/www1" ]; then
-              sudo mkdir -p /nest/www1 && sudo chown -R $USER:$USER /nest/www1 && chmod 755 /nest/www
+              sudo mkdir -p /nest/www1 && sudo chown -R $USER:$USER /nest/www1 && chmod 755 /nest/www1
             fi
 
       - name: 传输前端文件
@@ -56,7 +53,7 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: 22
-          source: "./dist1"
+          source: "dist1/**"
           target: "/nest/www1"
           overwrite: true
           recursive: true
