--- a/111workflow/admin.yml
+++ b/111workflow/admin.yml
@@ -2,6 +2,9 @@ name: 前端部署工作流
 on:
   push:
     branches: [master]
+    paths:
+      - "admin-vue3/**"
+      - ".github/workflows/admin.yml"
 
 jobs:
   build:
