--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,7 +53,7 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: 22
-          source: "dist1/**"
+          source: "dist1/file1,dist1/file2"
           target: "/nest/www1"
           overwrite: true
           recursive: true
