--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,6 +58,15 @@ jobs:
           target: "/nest/www1"
           overwrite: true
           recursive: true
+
+      - name: 移动文件
+        uses: appleboy/ssh-action@v1.0.2
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          port: 22
+          debug: true
           script: |
             mv /nest/www1/dist1/file1 /nest/www1/file1
             mv /nest/www1/dist1/file2 /nest/www1/file2
