--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -130,7 +130,7 @@ jobs:
             echo "===== 拉取镜像（带超时和重试） ====="
             for i in {1..3}; do
               echo "第 $i 次尝试拉取镜像..."
-              if COMPOSE_HTTP_TIMEOUT=300 docker-compose pull; then
+              if COMPOSE_HTTP_TIMEOUT=300 docker-compose -f ./config/docker-compose.yml pull; then
                 echo "✅ 镜像拉取成功"
                 break
               fi
@@ -143,7 +143,7 @@ jobs:
             done
 
             # 启动服务
-            docker-compose -f server/config/docker-compose.yml up -d --build
+            docker-compose -f ./config/docker-compose.yml up -d --build
 
             # 验证容器状态
             docker-compose ps
