--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -120,23 +120,19 @@ jobs:
           script: |
             cd /nest/server || exit 1
 
-            # 当前目录
-            echo "当前目录：$(pwd)"
-            echo "列出当前目录内容："
-            ls -la $(pwd)
-
-            docker-compose down  # 停止旧容器
 
             # 移动dist和config到正确位置
             mv /nest/server/distServer/dist /nest/server/dist
             mv /nest/server/distServer/config /nest/server/config
             rm -rf /nest/server/distServer
 
+            docker-compose -f ./config/docker-compose.yml down  # 停止旧容器
+
             # 关键修复3：增加拉取超时时间，重试机制
             echo "===== 拉取镜像（带超时和重试） ====="
             for i in {1..3}; do
               echo "第 $i 次尝试拉取镜像..."
-              if COMPOSE_HTTP_TIMEOUT=300 docker-compose -f nest/server/config/docker-compose.yml pull; then
+              if COMPOSE_HTTP_TIMEOUT=300 docker-compose -f ./config/docker-compose.yml pull; then
                 echo "✅ 镜像拉取成功"
                 break
               fi
@@ -149,7 +145,7 @@ jobs:
             done
 
             # 启动服务
-            docker-compose -f nest/server/config/docker-compose.yml up -d --build
+            docker-compose -f ./config/docker-compose.yml up -d --build
 
             # 验证容器状态
             docker-compose ps
