--- a/server/config/nginx.conf
+++ b/server/config/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 80;
+    listen 8080;
     server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
@@ -7,6 +7,15 @@ server {
     # 支持React单页应用路由（刷新不404）
     location / {
         try_files $uri $uri/ /index.html;
+    }
+
+    location /prod-api/ {
+        proxy_pass http://localhost:3000;  # 假设后端服务运行在3000端口
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 
     # 启用Gzip压缩，加速静态资源加载
