--- a/server/config/nginx.conf
+++ b/server/config/nginx.conf
@@ -1,31 +1,24 @@
+# nginx.conf
 server {
-    listen 80;
-    server_name localhost;
-    root /usr/share/nginx/html;
-    index index.html;
+    listen 80;  # 前端服务开放在 80 端口
+    server_name 106.12.170.27;  # 服务器 IP 地址
 
-    # 支持React单页应用路由（刷新不404）
+    # 前端静态资源配置（Vue/React 等 SPA 项目）
     location / {
-        try_files $uri $uri/ /index.html;
+        root /usr/share/nginx/html;  # 前端静态文件路径（挂载自 ../../www/dist）
+        index index.html;
+        try_files $uri $uri/ /index.html;  # 支持前端路由（SPA）
     }
 
+    # 后端 API 反向代理配置（NestJS 服务）
     location /prod-api/ {
-        proxy_pass http://localhost:3000;  # 假设后端服务运行在3000端口
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+        proxy_pass http://pm2-nestjs:3000/;  # 通过容器名访问后端服务
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # 启用Gzip压缩，加速静态资源加载
-    gzip on;
-    gzip_types text/css application/javascript image/svg+xml;
-    gzip_vary on;
-
-    # 缓存静态资源（JS/CSS/图片等）
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        expires 30d;
-        add_header Cache-Control "public, max-age=2592000";
-    }
+    # 可选：限制请求体大小（如上传大文件）
+    client_max_body_size 20M;
 }
