--- a/server/config/docker-compose.yml
+++ b/server/config/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     image: node:18-alpine
     container_name: pm2-nestjs
     volumes:
-      - /nest/server/dist:/app/dist # 挂载已打包的 dist 目录
+      - /nest/server/dist/dist:/app/dist # 挂载已打包的 dist 目录
       - /app/node_modules # 避免挂载覆盖 node_modules
     environment:
       DB_HOST: mysql
@@ -67,8 +67,8 @@ services:
     image: nginx:1.23
     container_name: nginx
     volumes:
-      - ../www/dist:/usr/share/nginx/html # 挂载前端静态文件到Nginx
-      - ./config/nginx.conf:/etc/nginx/conf.d/default.conf # 挂载自定义Nginx配置
+      - ../../www/dist:/usr/share/nginx/html # 挂载前端静态文件到Nginx
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf # 挂载自定义Nginx配置
     healthcheck:
       test: ['CMD', 'curl', '-f', 'http://localhost'] # 健康检查：访问本地主页
       interval: 30s
