--- a/.github/workflows/file.yml
+++ b/.github/workflows/file.yml
@@ -23,4 +23,4 @@ jobs:
           npm run build
 
       - name: upload to file
-        run: ls -la /server/node_modules
+        run: ls -la ./server/node_modules
