--- a/server/src/config/dev.yml
+++ b/server/src/config/dev.yml
@@ -12,7 +12,8 @@ app:
     # location 文件上传后存储目录，相对路径（相对本项目根目录）或绝对路径
     location: '../upload'
     # 文件服务器地址，这是开发环境的配置 生产环境请自行配置成可访问域名
-    domain: 'http://localhost:8080'
+    # domain: 'http://localhost:8080'
+    domain: 'http://106.12.170.27:8080'
     # 文件虚拟路径, 必须以 / 开头， 如 http://localhost:8080/profile/****.jpg  , 如果不需要则 设置 ''
     serveRoot: '/profile'
     # 文件大小限制，单位M
@@ -28,7 +29,8 @@ cos:
 # 数据库配置
 db:
   mysql:
-    host: 'localhost'
+    # host: 'localhost'
+    host: '106.12.170.27'
     username: 'root'
     password: '123456'
     database: 'nest-admin'
@@ -44,8 +46,9 @@ db:
 
 # redis 配置
 redis:
-  host: 'localhost'
-  password: '123456'
+  host: '106.12.170.27'
+  # host: 'localhost'
+  # password: '123456'
   port: 6379
   db: 2
   keyPrefix: ''
